--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
             defer
         ></script>
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Geologica&family=Reem+Kufi&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Work+Sans&display=swap');
         </style>
         <script type="module" src="/src/main.jsx"></script>
     </body>
