--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,19 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="CalmNest is a platform that helps you to manage your mental health and well-being."
+        />
+        <meta
+            name="keywords"
+            content="mental health, well-being, calm, nest, calmnest, platform, manage, health, mental, well, being"
+        />
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="/assets/favicon/logo-800x800.ico"
+        />
         <title>CalmNest</title>
     </head>
     <body>
